<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/home"
        android:id="@+id/mainScreenFragment"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item
        android:title="@string/favourites_prayers"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:id="@+id/favouritesFragment"/>

    <item
        android:title="@string/favorite_facts"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:id="@+id/favoriteFactsFragment"/>

    <item
        android:title="@string/view_notes"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:id="@+id/viewNotesFragment"/>

 <item android:title="@string/communicate">
    <menu>
    <item android:id="@+id/aboutFragment"
        android:title="@string/about_app"/>

        <item android:title="@string/report_contact"
            android:icon="@drawable/ic_contact"
            android:id="@+id/reportFragment"/>

        <item android:title="@string/rate_me"
            android:icon="@drawable/ic_baseline_grade_24"
            android:id="@+id/rate_me"/>

    <item android:title="@string/log_out"
        android:icon="@drawable/ic_close"
        android:id="@+id/log_out"/>
    </menu>
</item>
</menu>