<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.report.ReportFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/recipient_email"
        android:text="@string/ebukaikenwa6419_gmail_com"
        android:id="@+id/recipientEm"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:layout_marginBottom="20dp"
        android:id="@+id/subjectEm"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:gravity="bottom"
        android:layout_marginBottom="20dp"
        android:id="@+id/messageEm"
        android:minHeight="150dp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_send_intent"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/send_email"/>
</LinearLayout>