<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="8dp"
    tools:context=".ui.quiz.CatholicQuizFragment">

    <Button
        android:id="@+id/bible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:layout_marginTop="312dp"
        android:background="@color/colorWhite"
        android:padding="13dp"
        android:textStyle="bold"
        android:text="@string/quiz_bible"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/catholicQuiz"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        android:padding="13dp"
        android:textStyle="bold"
        android:text="@string/quiz_cathechesis"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bible" />

    <Button
        android:id="@+id/advanced"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        android:padding="13dp"
        android:textStyle="bold"
        android:text="@string/quiz_facts"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catholicQuiz" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>